[gd_scene load_steps=8 format=3 uid="uid://bxd3i06rqpxf0"]

[ext_resource type="Script" uid="uid://ddg138yuagx4i" path="res://sources/menus/register/steps/base_step.gd" id="1_02ocl"]
[ext_resource type="Texture2D" uid="uid://d1tsqdom1rra1" path="res://assets/theme/arrow_back.svg" id="2_41tvo"]
[ext_resource type="Script" uid="uid://ddmyah1o42hwp" path="res://addons/godot-form-validator/form_validator.gd" id="2_nw61e"]
[ext_resource type="Texture2D" uid="uid://doql1x228r1bv" path="res://assets/look_and_learn/arrow.svg" id="3_17uns"]
[ext_resource type="Script" uid="uid://b11owjubqe3iw" path="res://sources/utils/binder/form_binder.gd" id="3_mk32l"]
[ext_resource type="Texture2D" uid="uid://d3rhl050u0ahl" path="res://assets/menus/login/password_background.png" id="4_h32tf"]
[ext_resource type="PackedScene" uid="uid://cr4q0ywceoasx" path="res://sources/utils/keyboard_spacer.tscn" id="6_i4s2p"]

[node name="BaseRegisterForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_02ocl")

[node name="LeftMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 2.08165e-12)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 240.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="LeftContainer" type="VBoxContainer" parent="LeftMargin"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="BackButton" type="Button" parent="LeftMargin/LeftContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "BACK"
icon = ExtResource("2_41tvo")

[node name="RightMargin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(450, 2.08165e-12)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="RightContainer" type="VBoxContainer" parent="RightMargin"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="ValidateButton" type="Button" parent="RightMargin/RightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "NEXT"
icon = ExtResource("3_17uns")
icon_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 0.5
grow_horizontal = 2
theme_type_variation = &"PanelKalulu"

[node name="QuestionContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/QuestionContainer"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="PanelContainer/QuestionContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="InfoLabel" type="Label" parent="PanelContainer/QuestionContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="FormValidator" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_nw61e")

[node name="FormBinder" type="Control" parent="FormValidator"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_mk32l")

[node name="Control" parent="FormValidator/FormBinder" instance=ExtResource("6_i4s2p")]
layout_mode = 1

[node name="Background" type="TextureRect" parent="FormValidator/FormBinder/Control"]
custom_minimum_size = Vector2(1624, 812)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("4_h32tf")

[node name="FormMargin" type="MarginContainer" parent="FormValidator/FormBinder/Control/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 50

[node name="FormContainer" type="VBoxContainer" parent="FormValidator/FormBinder/Control/Background/FormMargin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[connection signal="pressed" from="LeftMargin/LeftContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="RightMargin/RightContainer/ValidateButton" to="." method="_on_validate_button_pressed"]
[connection signal="control_validated" from="FormValidator" to="." method="_on_form_validator_control_validated"]
